plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'Midas'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' } // iamport maven 라이브러리를 받아오기 위한 세팅
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	//implementation 'com.mysql:mysql-connector-j'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	implementation 'com.nimbusds:nimbus-jose-jwt:9.22'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'


    developmentOnly 'org.springframework.boot:spring-boot-devtools'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
//	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta'

	implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	compileOnly 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'

	implementation 'org.springframework.boot:spring-boot-starter-mail'

	implementation 'me.paulschwarz:spring-dotenv:2.5.4'

	implementation 'org.springframework.boot:spring-boot-starter-mail'


//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // 테스트 관련 의존성 - JUnit Jupiter 사용
	testImplementation 'org.springframework.security:spring-security-test'

	implementation 'org.postgresql:postgresql' //prostgresql
}

tasks.named('test') {
	useJUnitPlatform()
}
